# rag

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  API_DOCUMENTATION_SUMMARY.md  PLANNING.md  README.md  README.启动说明.md  TASK.md  api_summary.py  initialize.sh  requirements.txt  restart_backend.sh  restart_backend_with_init.sh  start.sh  stop.sh  test_document.txt
backend/: .env.example  .pre-commit-config.yaml  .test_token  MILVUS_DYNAMIC_FIELDS_FIX_SUMMARY.md  RAG_FIX_SUMMARY.md  README.md  README_DEBUG.md  README_RESULTS.md  check_routes.py  debug_api_search.py  debug_rag_connection.py  debug_search_issue.py  initialize_milvus.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_rag_service.py  test_upload.txt  test_upload2.txt
backend/app/: config.py  main.py
backend/app/admin/: __init__.py  auth.py  router.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  embedding.py  logger.py  paths.py  security.py  vector_store.py
backend/app/db/: document_store.py  init_db.py  milvus.py  mongodb.py  session.py
backend/app/models/: document_collection.py  llm.py  user.py
backend/app/rag/: __init__.py  cache_service.py  collection_manager.py  config.py  constants.py  custom_exceptions.py  database.py  document_processor.py  document_splitter.py  document_store.py  embedding_model.py  models.py  parent_child_processor.py  pdf_processor.py  retrieval_service.py  text_splitter.py  vector_factory.py  vector_store.py
backend/app/schemas/: llm.py  rag.py  user.py
backend/app/services/: document_collection_service.py  document_service.py  llm_service.py  rag_service.py  user.py
backend/app/utils/: pdf_utils.py
backend/backend/data/: split_results.json
backend/database/: __init__.py
backend/database/config/: __init__.py  settings.py
backend/database/models/: __init__.py  document.py
backend/database/scripts/: README.md  __init__.py  check_stored_data.py  export_documents.py  init_db.py  init_db.sh  initialize_milvus.py  (+2 more)
backend/debug/: debug_pdf_content.py  debug_text_content.py
backend/docs/: ENDPOINT_UNIFICATION.md
backend/requirements/: base.txt  test.txt
backend/scripts/: README.md  check_stored_data.py  create_admin.py  export_documents.py  initialize_milvus.py  inspect_vectors.py  migrate_collections.py  rebuild_collection.py  test_document_storage.py  test_document_validation.py  test_pdf_splitting.py  test_splitting_parameters.py  verify_milvus_fixes.py
backend/tests/: .test_token  README.md  TEST_REORGANIZATION_PLAN.md  TEST_REORGANIZATION_SUMMARY.md  __init__.py  conftest.py  create_test_token.py  llm_api_client.py  requirements.txt  run_organized_tests.py  run_rag_tests.py  run_tests.py  test_api.sh  test_discover.py  test_discover_alt.py  test_discover_curl.sh  test_discover_dev.py  test_discover_direct.py  test_discover_endpoints.py  test_llm_api.sh  test_llm_curl.sh  test_llm_endpoints.py  test_lmstudio_direct.py  test_register_endpoints.py  test_with_token.py
(+166 files in other folders)
